--- a/numberplace/cell_predict.ipynb
+++ b/numberplace/cell_predict.ipynb
@@ -26,6 +26,9 @@
     "#from preprocess import _extract_num as exnum\n",
     "\n",
     "\n",
+    " #日本語対応フォントを指定する\n",
+    "plt.rcParams['font.family'] = 'MS Gothic'\n",
+    "\n",
     "img_path = \"../pictures/output1.png\" #コーナー検出済みの画像をpicturesフォルダから読み込む\n",
     "\n",
     "if not os.path.exists(img_path): #画像がない場合\n",
@@ -57,16 +60,6 @@
     "    processed_split = np.array(processed_split)\n",
     "    #print(processed_split.shape) #81 28 28 1\n",
     "\n",
-    "    # fig, axes = plt.subplots(size, size, figsize=(5, 5)) #処理後の盤面画像を表示\n",
-    "    # for i in range(size):\n",
-    "    #     for j in range(size):\n",
-    "    #      idx = i * size + j\n",
-    "    #      ax = axes[i, j]\n",
-    "    #      ax.imshow(processed_split[idx].squeeze(), cmap='gray',vmin=0,vmax=1) #画素値の範囲を定める\n",
-    "    #      ax.axis('off') #軸を非表示\n",
-    "\n",
-    "    # plt.tight_layout()\n",
-    "    # plt.show()\n",
     "\n",
     "    model = keras.models.load_model(\"model_font2.keras\")\n",
     "    pred = model.predict(processed_split)                  #モデルによる数字の推定\n",
@@ -116,9 +109,6 @@
     "    # 軸の上と右を有効化してラベルが上・左に来るように\n",
     "    plt.tick_params(top=True, bottom=False, labeltop=True, labelbottom=False)\n",
     "    plt.tick_params(left=True, right=False, labelleft=True, labelright=False)\n",
-    "\n",
-    "      #日本語対応フォントを指定する\n",
-    "    plt.rcParams['font.family'] = 'MS Gothic'\n",
     "    \n",
     "    plt.xlabel(\"列\", labelpad=20)\n",
     "    plt.gca().xaxis.set_label_position('top')\n",
@@ -200,7 +190,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.11.9)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
